--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.2.0'
     compile 'com.google.android.gms:play-services-location:11.2.0'
     compile 'io.nlopez.smartlocation:library:3.3.2'
+    compile 'com.google.android.gms:play-services:11.2.0'
 }
