--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.2.0'
     compile 'io.nlopez.smartlocation:library:3.3.2'
     compile 'com.google.android.gms:play-services:11.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 }
